# Accelerated-Cpp-Ex

./: Accelerated_CPP.pro  CMakeLists.txt  README.md
0/: CMakeLists.txt
0/hello/: CMakeLists.txt  a.out  main.cpp
1/: 1.pro  CMakeLists.txt
1/framing_strings/: CMakeLists.txt  a.out  main.cpp
1/input/: CMakeLists.txt  a.out  main.cpp
2/: 2.pro  CMakeLists.txt
2/ass1/: CMakeLists.txt  a.out  main.cpp
2/ass2/: CMakeLists.txt  a.out  main.cpp
2/ass3/: CMakeLists.txt  a.out  main.cpp
2/ass4/: CMakeLists.txt  a.out  main.cpp
2/ass5/: CMakeLists.txt  a.out  main.cpp
2/ass6/: CMakeLists.txt  a.out  main.cpp
2/framing_compactloop/: CMakeLists.txt  a.out  main.cpp
3/: 3.pro  CMakeLists.txt
3/3ass1/: CMakeLists.txt  a.out  main.cpp
3/3ass2/: CMakeLists.txt  a.out  main.cpp
3/3ass3/: CMakeLists.txt  a.out  main.cpp
3/3ass4/: CMakeLists.txt  a.out  grade.out  main.cpp
3/dataTry1/: CMakeLists.txt  a.out  main.cpp
3/dataTry2/: CMakeLists.txt  a.out  main.cpp
4/: CMakeLists.txt
4/4ass1/: CMakeLists.txt  main.cpp
4/4ass2/: CMakeLists.txt  a.out  main.cpp  sorts_und.h
4/4ass3/: CMakeLists.txt  a.out  main.cpp
4/final_partitoning_prog/: CMakeLists.txt
4/final_partitoning_prog/header/: Student_info.h  grade.h
4/final_partitoning_prog/source/: Student_info.cpp  grade.cpp  main.cpp  median.cpp
4/func_orgcomp1/: CMakeLists.txt  main.cpp
4/func_orgcomp2/: CMakeLists.txt  main.cpp
5/: CMakeLists.txt
5/case1_index accessor/: CMakeLists.txt
5/case1_index accessor/header/: category.h
5/case1_index accessor/source/: category.cpp  main.cpp
(+16 files in other folders)
